#feature #fix found the reason why milestone icon was rendering different on the calendar. Found solution to add line breaks in tool tip to represent different events occuring on the same day.

--- a/portfolio/src/main/resources/static/styles/planner.css
+++ b/portfolio/src/main/resources/static/styles/planner.css
@@ -17,3 +17,7 @@
     padding-right: 10px;
     padding-bottom: 1em;
 }
+
+.tooltip-inner {
+    white-space: pre-line;
+}
